Removed object persistence from item & state db